# tinge

./: .gitignore  Cargo.toml  README.md
ffi/: Cargo.toml
lib/: Cargo.toml
lib/src/: lib.rs
src/: lib.rs  main.rs  model.rs  render.rs
wasm/: Cargo.toml
