[package]
name = "tinge_lib"
version = "0.1.0"
edition = "2021"
authors = ["<zipxing@hotmail.com>"]
repository = "https://github.com/zipxing/tinge/lib"
readme = "../README.md"
license = "Apache-2.0"
description = "A terminal-gui tool for generate, analyze, convert and manipulate colors..."
categories = ["command-line-utilities", "gui", "graphics"] # https://crates.io/category_slugs


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.16"
rust_pixel = { git = "https://github.com/zipxing/rust_pixel", version = "0.4.5"}


